# nwf-recsys

./: .gitignore  README.md  RELEASE.md  pyproject.toml
examples/: movielens_100k.py
notebooks/: movielens_100k.ipynb
src/nwf/recsys/: __init__.py  encoders.py
