[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwf-recsys"
version = "0.1.1"
description = "NWF for recommendation systems: matrix factorization with (z, sigma) for users and items. MovieLens, HR@k, incremental learning."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Belousov Roman Sergeevich", email = "roma.belyy.5550955@mail.ru"}]
keywords = ["nwf", "recommendations", "matrix-factorization", "collaborative-filtering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "nwf-core>=0.2.3",
    "numpy>=1.21",
    "torch>=1.10",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pytest"]
examples = ["matplotlib>=3.5"]
all = ["nwf-recsys[dev,examples]"]

[project.urls]
Homepage = "https://github.com/romero19912017-ui/nwf-recsys"
Repository = "https://github.com/romero19912017-ui/nwf-recsys"
Documentation = "https://github.com/romero19912017-ui/nwf-recsys"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["nwf.recsys"]

[tool.black]
line-length = 88
